# aevo-sdk

./: README.md  aevo.py  deposit_example.py  generate_infinite_expiry_signing_key.py  order_rest_example.py  order_ws_example.py  pyproject.toml  requirements.txt  withdraw_example.py
python/: aevo.py  client.py  main.py  requirements.txt
src/: aevo.py  eip712_structs.py  generate_infinite_expiry_signing_key.py  order_rest_example.py
